--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -12,8 +12,9 @@ App:
 Database:
   DBType: postgresql
   Username: demodb01 #填写你的数据库账号
-  Password: demoddb01 #填写你的数据库密码
-  Host: localhost:5432
+  Password: demodb01 #填写你的数据库密码
+  Host: localhost
+  Port: 5432
   DBName: blog_api
   TablePrefix: blog_
   Charset: utf8
