--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -8,7 +8,7 @@ App:
   MaxPageSize: 100
   LogSavePath: storage/logs
   LogFileName: app 
-  LogFileExt: log
+  LogFileExt: .log
 Database:
   DBType: postgresql
   Username: demodb01 #填写你的数据库账号
